--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,21 +1,13 @@
----
-root: true
-
-plugins:
-  - jest
-  - babel
-
 env:
+  es2021: true
   node: true
-  jest: true
   browser: true
-
-parser: "@babel/eslint-parser"
-
-extends:
-  - "airbnb-base"
-  - "plugin:jest/recommended"
-
-rules:
-  no-console: 0
-  import/extensions: 0
+extends: airbnb-base
+parserOptions:
+  ecmaVersion: latest
+  sourceType: module
+rules: {
+  import/no-extraneous-dependencies: 
+    error,
+    devDependencies: 0
+}
