--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "save-dev": "^0.0.1-security"
+    "i18next": "^23.11.5",
+    "lodash": "^4.17.21",
+    "on-change": "^5.0.1",
+    "save-dev": "^0.0.1-security",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
